--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
         </div>
     </head>
     <body BGCOLOR="wheat">
-        <h3>Last Updated[]</h3>
-        <h1>How is Hong Kong?</h1>
+        <h3>Last Updated 01/03/2022</h3>
+        <h1>Hope you are having a blast in HK. It is pretty obvious that you are as HK is awesome. </h1>
        <p>We miss you here in NYC; the cold winter was very hard to stomach without one of New York's warmest personalties. This is my very first website I hope you like it. Way easier than I thought it would be, granted this is a pretty crude website. </p>
-       <p> Thank God I can update this website when I want this was not finished when package was sent out</p>
+       <p> Thank God I can update this website when I want, this was not finished when Susane sent out this package</p>
         <h2> Hope you enjoy some of the content </h2>
         <p>
-        The Banner: I spent sometime on its design. The numbers are for a book chyper. I was going to add more but I didn't want to clutter the banner so I made this website to add anything extra.
+        The Banner: I spent sometime on its design. It was supposed to be much cooler than it turned out. I was shooting for something I wanted over my room that would read "Ignorance is bliss" to remind me of thinking and over thinking and deep thinking and tough thinking, and how sometimes its better not to. I left a Book Chyper in the banner, hopefully you can figure it out. I was going to add more but I didn't want to clutter the banner so I made this website to add anything extra, and just keep you entertained.
         </p>
         <br>
         <hr>
         <h3> List of some fun website</h3>
-        <a href="http://stuffin.space" target="blank">http://stuffin.space(Website showing you what is orbiting earth)</a>
+        <a href="http://stuffin.space" target="blank">http://stuffin.space </a>(Website showing you what is orbiting earth)
         <br>
-        <a href="https://xkcd.com" target="blank">https://xkcd.com(funny, high concept math/physics/logic comic)</a>
+        <a href="https://xkcd.com" target="blank">https://xkcd.com</a>(funny, high concept math/physics/logic comic)
         <br>
-        <a href="https://biggsrbr.weebly.com/uploads/8/7/4/4/8744974/the-tao-of-pooh-by-benjamin-hoff1.pdf" target="blank">https://biggsrbr.weebly.com/uploads/8/7/4/4/8744974/the-tao-of-pooh-by-benjamin-hoff1.pdf(for the chyper)</a>
+        <a href="https://biggsrbr.weebly.com/uploads/8/7/4/4/8744974/the-tao-of-pooh-by-benjamin-hoff1.pdf" target="blank">https://biggsrbr.weebly.com/uploads/8/7/4/4/8744974/the-tao-of-pooh-by-benjamin-hoff1.pdf</a> (for the chyper)
         <hr>
         <img src="https://imgs.xkcd.com/comics/greek_letters.png">
         <br>
-        <img src=
+        <img src= "includes_infrared_ultraviolet_thermal_imaging_xray_telescope_miniLIGO_detector_and_MUCH_MUCH_MORE.png">
     
     </body>>
     
